# langchain-course

./: 1_agent_loop_langchain_tool_calling.py  2_agent_loop_raw_function_calling.py  3_raw_react_prompt.py  README.md  ingestion.py  main.py  nodes.py  pyproject.toml  react.py
backend/: core.py
chroma_db/: chroma.sqlite3
